--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "register-service-worker": "^1.0.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
